--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "build:demo": "scripts/build buildDemo",
     "deploy:demo:next": "scripts/build deployDemo --next",
     "deploy:demo": "scripts/build deployDemo",
-    "prepack": "scripts/build changelog"
+    "prepack": "scripts/build changelog",
+    "update-lib-versions": "lerna exec -- \\$LERNA_ROOT_PATH/scripts/update-lib-versions"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
