feat: bump pslb@^4.0.0 - update for breaking changes

--- a/packages/hotspot/package.json
+++ b/packages/hotspot/package.json
@@ -25,5 +25,10 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-konva": "^16.9.0-0"
+  },
+  "pslb": {
+    "overrides": {
+      "react-konva": "*"
+    }
   }
 }
