Add likert question type.

--- a/packages/likert/package.json
+++ b/packages/likert/package.json
@@ -9,14 +9,17 @@
   "module": "src/index.js",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
-    "@pie-framework/pie-player-events": "^0.1.0",
-    "@pie-lib/graphing": "^2.0.0",
+    "@pie-lib/config-ui": "^10.8.25",
     "@pie-lib/math-rendering": "^2.1.12",
     "@pie-lib/render-ui": "^4.8.0",
     "classnames": "^2.2.5",
     "debug": "^4.1.1",
+    "lodash": "^4.17.10",
+    "prop-types": "^15.6.1",
     "react": "^16.8.1",
-    "react-dom": "^16.8.1"
+    "react-dom": "^16.8.1",
+    "react-test-renderer": "^16.3.2",
+    "react-transition-group": "^2.3.1"
   },
   "author": "",
   "license": "ISC",
