--- a/packages/likert/package.json
+++ b/packages/likert/package.json
@@ -4,13 +4,13 @@
     "access": "public"
   },
   "version": "0.0.1",
-  "description": "This interaction asks a student to draw a line that meets specific criteria. The student will draw the line by clicking on two points on the graph.",
+  "description": "This interaction asks a student to answer a likert question.",
   "main": "lib/index.js",
   "module": "src/index.js",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
-    "@pie-lib/config-ui": "^10.8.25",
     "@pie-lib/math-rendering": "^2.1.12",
+    "@pie-framework/pie-player-events": "^0.1.0",
     "@pie-lib/render-ui": "^4.8.0",
     "classnames": "^2.2.5",
     "debug": "^4.1.1",
