--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "minimist": "^1.2.0",
     "now": "^13.1.3",
     "opn": "^5.4.0",
+    "prettier": "^2.1.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-test-renderer": "^16.8.6"
