--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jest": "^24.1.0",
     "lerna": "^3.13.0",
     "minimist": "^1.2.0",
+    "node-fetch" : "^2.6.1",
     "now": "^13.1.3",
     "opn": "^5.4.0",
     "react": "^16.8.1",
