--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -8,10 +8,12 @@
     "@material/top-app-bar": "^0.44.0",
     "@pie-ui/calculator": "^3.3.21",
     "@pie-ui/categorize": "^1.4.19",
+    "@pie-ui/charting": "^0.2.32",
     "@pie-ui/drag-in-the-blank": "^1.7.34",
     "@pie-ui/explicit-constructed-response": "^1.7.32",
     "@pie-ui/extended-text-entry": "^3.2.37",
     "@pie-ui/fill-in-the-blank": "^1.3.39",
+    "@pie-ui/graphing": "^3.0.9",
     "@pie-ui/inline-dropdown": "^1.8.25",
     "@pie-ui/match": "^2.4.6",
     "@pie-ui/match-list": "^1.4.38",
