--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lerna": "^3.13.0",
     "minimist": "^1.2.0",
     "node-fetch": "^2.6.1",
+    "npm-check-updates": "^9.0.2",
     "now": "^13.1.3",
     "opn": "^5.4.0",
     "prettier": "^2.1.2",
