--- a/packages/passage/package.json
+++ b/packages/passage/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
+    "@pie-lib/render-ui": "^4.9.4",
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1"
