--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "lerna": "^3.13.0",
     "minimist": "^1.2.0",
     "node-fetch": "^2.6.1",
-    "npm-check-updates": "^9.0.2",
     "now": "^13.1.3",
+    "npm-check-updates": "^9.0.2",
     "opn": "^5.4.0",
     "prettier": "^2.1.2",
     "react": "^16.8.1",
@@ -60,7 +60,7 @@
     "packages/*"
   ],
   "dependencies": {
-    "ncu": "^0.2.1",
-    "mathjs": "^6.6.1"
+    "mathjs": "^6.6.1",
+    "ncu": "^0.2.1"
   }
 }
