--- a/packages/multi-trait-rubric/package.json
+++ b/packages/multi-trait-rubric/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@pie-framework/pie-player-events": "^0.1.0",
+    "@pie-lib/render-ui": "^4.11.3",
     "enzyme-to-json": "^3.3.5",
     "prop-types": "^15.6.1",
     "react": "^16.8.1",
